--- a/docs/styles/global/_default.scss
+++ b/docs/styles/global/_default.scss
@@ -132,3 +132,27 @@
     width: 100%
   )
 );
+
+// Copy sizes
+@include type-set(
+  'copy-large', base,
+  (
+    font-size: 18px,
+    line-height: 1.5
+  )
+);
+@include type-set(
+  'copy-standard', base,
+  (
+    font-size: 16px,
+    line-height: 1.5
+  )
+);
+@include type-set(
+  'copy-small', base,
+  (
+    font-size: 12px,
+    line-height: 1.5,
+    font-weight: 100
+  )
+);
