Adding quicksand font.

--- a/src/styles__pre/base/_typography.scss
+++ b/src/styles__pre/base/_typography.scss
@@ -1,6 +1,6 @@
 @import 'quicksand';
 
-$netcanvas-font-family: 'Quicksand', cursive;
+$netcanvas-font-family: 'Quicksand', 'Open Sans', sans serif;
 $netcanvas-font-size: 16px;
 $line-height-base: 1.5 !default;
 
