Fonts to relative path.

--- a/lib/styles/global/_default.scss
+++ b/lib/styles/global/_default.scss
@@ -1,10 +1,14 @@
+@import "core/animation";
 @import "core/bem";
 @import "core/breakpoints";
 @import "core/color";
 @import "core/grid";
 @import "core/functions";
 @import "core/reset";
+@import "core/spacing";
 @import "core/type";
+
+@import "core/normalize";
 
 // Default Breakpoint Settings
 // =============================================================================
