--- a/styles/components/inputs.scss
+++ b/styles/components/inputs.scss
@@ -41,13 +41,19 @@
       @include type('title-2');
       font-weight: 700;
       position: absolute;
+      top: 0;
+      left: 0;
+
       transition: all 250ms ease-in-out;
       transform: scale(1) translate(0, 0);
       transform-origin: left top 0px;
       pointer-events: none;
       user-select: none;
       z-index: 1;
-      top: 0;
+
+      &--active {
+        transform: scale(.6) translate(0, 60px);
+      }
     }
 
     font-family: inherit;
