Adding sidemenu mixin.

--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -6,6 +6,7 @@
 @include button;
 @include icon;
 @include input;
+@include sidemenu;
 
 .app {
   display: flex;
@@ -13,18 +14,15 @@
   width: 100%;
   background-color: palette('dark-background');
   color: color('white');
+
+  &__content {
+    @include sidemenu-visible;
+  }
 }
 
 @include block('sidenav') {
   max-width: 250px;
   flex: 0 0 30%;
-  background-color: color('cyber-grape');
-
-  @include element('list') {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
 }
 
 .color {
