--- a/styles/global/core/_normalize.scss
+++ b/styles/global/core/_normalize.scss
@@ -27,7 +27,7 @@
     -ms-text-size-adjust: 100%; // 4
     -ms-overflow-style: scrollbar; // 5
     -webkit-tap-highlight-color: rgba(0,0,0,0); // 6
-    @include type('quicksand');
+    @include typography('quicksand');
   }
 
   *,
@@ -85,7 +85,7 @@
   // By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
   // margin for easier control within type scales as it avoids margin collapsing.
   h1, h2, h3, h4, h5, h6 {
-    @include type('quicksand');
+    @include typography('quicksand');
     margin-top: 0;
     margin-bottom: .5rem;
   }
