--- a/src/styles/global/core/_animation.scss
+++ b/src/styles/global/core/_animation.scss
@@ -2,12 +2,12 @@
 $animation-default-scale-factor: 1;
 
 // Durations
-$animation-fast-duration: ($animation-default-scale-factor*0.3)s;
-$animation-standard-duration: ($animation-default-scale-factor*0.5s);
-$animation-slow-duration: ($animation-default-scale-factor*1s);
+$animation-fast-duration: ($animation-default-scale-factor * 300ms);
+$animation-standard-duration: ($animation-default-scale-factor * 500ms);
+$animation-slow-duration: ($animation-default-scale-factor * 1s);
 
 // Curves
-$animation-ios-easing: cubic-bezier(0.23,1,0.32,1);
-$animation-android-easing: cubic-bezier(0.4, 0.0, 0.2, 1);
+$animation-ios-easing: cubic-bezier(.23, 1, .32, 1);
+$animation-android-easing: cubic-bezier(.4, 0, .2, 1);
 
 $animation-default-easing: $animation-android-easing;
