--- a/lib/styles/global/_default.scss
+++ b/lib/styles/global/_default.scss
@@ -4,11 +4,12 @@
 @import "core/color";
 @import "core/grid";
 @import "core/functions";
-@import "core/reset";
 @import "core/spacing";
-@import "core/type";
-
+@import "core/typography";
+@import "core/quicksand";
 @import "core/normalize";
+
+$export-ui-classes: true !default;
 
 // Default Breakpoint Settings
 // =============================================================================
@@ -60,15 +61,62 @@
 @include color-set('tomato', #E82D3F);
 @include color-set('tomato--dark', #D32B3A);
 
+$roles: (
+  'node': color('network-canvas-coral'),
+  'edge': color('mustard'),
+  'primary': color('sea-green'),
+  'menu': color('white'),
+  'selected': color('white'),
+  'settings': color('slate-blue'),
+  'background': color('navy-taupe'),
+  'text': color('white'),
+  'tex-muted': color('cyber-grape'),
+  'link': color('nc-coral'),
+  'light-background': color('cyber-grape'),
+  'dark-background': color('rich-black'),
+  'headings': color('white'),
+  'menu-headings': color('charcoal'),
+  'divider': color('platinum--dark')
+);
+
+// Collections
+$nodes: (
+  default: (
+    base:   map-get($roles, node),
+    dark:   darken(map-get($roles, node), 5%)
+  )
+);
+
+$edges: (
+  default: (
+    base:   map-get($roles, edge),
+    dark:   darken(map-get($roles, edge), 5%)
+  )
+);
+
+@function node-palette($palette: 'default', $tone: 'base') {
+  @return map-get(map-get($nodes, $palette), $tone);
+}
+
+@function palette($role) {
+  @return map-get($roles, $role);
+}
+
 // Default Copy Typography Sizes
 // =============================================================================
+
+$netcanvas-font-size: 16px;
+$line-height-base: 1.5 !default;
+$headings-font-weight:   400 !default;
+$headings-line-height:   1.1 !default;
+
 @include type-set(
   'quicksand', base,
   (
     font-family: 'Quicksand, "Open Sans", sans-serif',
     font-size: 16px,
-    line-height: 1.5,
-    font-weight: 400
+    line-height: $line-height-base,
+    font-weight: $headings-font-weight
   )
 );
 @include type-set(
@@ -89,7 +137,7 @@
   (
     font-size: 32px,
     line-height: 1.429,
-    font-weight: 400,
+    font-weight: $headings-font-weight,
     text-align: center,
     width: 100%
   )
@@ -101,8 +149,8 @@
   'title-2', base,
   (
     font-size: 32px,
-    line-height: 1.5,
-    font-weight: 400,
+    line-height: $line-height-base,
+    font-weight: $headings-font-weight,
     width: 100%
   )
 );
@@ -112,8 +160,8 @@
   'title-3', base,
   (
     font-size: 17px,
-    line-height: 1.5,
-    font-weight: 400,
+    line-height: $line-height-base,
+    font-weight: $headings-font-weight,
     text-align: center,
     width: 100%
   )
@@ -123,7 +171,7 @@
   'title-4', base,
   (
     font-size: 16px,
-    line-height: 1.5,
+    line-height: $line-height-base,
     width: 100%
   )
 );
@@ -132,7 +180,7 @@
   'title-5', base,
   (
     font-size: 12px,
-    line-height: 1.5,
+    line-height: $line-height-base,
     width: 100%
   )
 );
@@ -142,21 +190,92 @@
   'copy-large', base,
   (
     font-size: 18px,
-    line-height: 1.5
+    line-height: $line-height-base
   )
 );
 @include type-set(
   'copy-standard', base,
   (
     font-size: 16px,
-    line-height: 1.5
+    line-height: $line-height-base
   )
 );
 @include type-set(
   'copy-small', base,
   (
     font-size: 12px,
-    line-height: 1.5,
+    line-height: $line-height-base,
     font-weight: 100
   )
 );
+
+@if $export-ui-classes {
+  @include normalize;
+  @include typography-classes;
+  @include grid-classes;
+}
+
+// TODO - when these variables are removed, they cause breaking changes in Network Canvas app, but they are redundant, so eventually they should be deprecated from the main APP
+$network-canvas-coral: #e2215b;
+$mustard: #f2b700;
+$light-sea-green: #00c9a2;
+$white: #fff;
+$slate-blue: #6b72ec;
+$navy-taupe: #2d2955;
+$cyber-grape: #3a3a75;
+$rich-black: #16152b;
+
+$sea-serpent: #0fb2e2;
+$purple-pizazz: #d30fef;
+$paradise-pink: #ff3a8c;
+$cerulean-blue: #0f70ff;
+$kiwi: #70bf54;
+$neon-carrot: #f7891e;
+$barbie-pink: #ed008c;
+$tomato: #e82d3f;
+
+$charcoal: #6d6f76;
+$platinum: #f2f6f7;
+$divider: #f2f2f2;
+$dark-platinum: #dae3e5;
+
+$netcanvas-font-family: 'Quicksand', 'Open Sans', sans serif;
+$netcanvas-font-size: 16px;
+$line-height-base: 1.5 !default;
+
+html {
+  font-family: $netcanvas-font-family;
+  font-size: $netcanvas-font-size;
+}
+
+// Headings
+
+$headings-font-family:   inherit !default;
+$headings-font-weight:   300 !default;
+$headings-line-height:   1.1 !default;
+$headings-color:         inherit !default;
+
+// Based of px sizes in style guide (em values were inconsistent)
+$text-sizes: (
+  h1: 1.75rem,
+  h2: 1.25rem,
+  h3: 1.0625rem,
+  h4: 1rem,
+  h5: .75rem,
+);
+
+@mixin text($text-size) {
+  font-family: $headings-font-family;
+  font-size: map-get($text-sizes, $text-size);
+  font-weight: $headings-font-weight;
+  letter-spacing: .05rem;
+  line-height: $headings-line-height;
+}
+
+@each $text-size in $text-sizes {
+  $text-size-name: nth($text-size, 1);
+
+  #{$text-size-name} {
+    @include text($text-size-name);
+  }
+}
