Adding more icon colors.

--- a/src/styles/components/icons.scss
+++ b/src/styles/components/icons.scss
@@ -20,6 +20,210 @@ $-icon-color-modifiers: (
   'paradise-pink'
 ) !default;
 
+@mixin special-icon-colors(
+  $main-color: 'sea-green'
+) {
+  // action / notification icons are a bit more detailed
+  // and need to be styled individually
+  &[name="add-a-context"] {
+    .cls-1 {
+      fill: color('#{$main-color}');
+    }
+    .cls-2 {
+      fill: color('platinum--dark', .3);
+    }
+    .cls-3 {
+      fill: color('platinum--dark', .6);
+    }
+    .cls-4 {
+      fill: color('platinum');
+    }
+    .cls-5 {
+      fill: color('platinum--dark');
+    }
+    .cls-6 {
+      fill: color('platinum');
+    }
+    .cls-7 {
+      fill: color('tomato');
+    }
+    .cls-8 {
+      fill: color('tomato--dark');
+    }
+  }
+
+  &[name="add-a-person"], &[name="add-a-relationship"] {
+    .cls-1 {
+      fill: color('#{$main-color}');
+    }
+    .cls-2 {
+      fill: color('platinum');
+    }
+    .cls-3 {
+      fill: color('platinum--dark');
+    }
+    .cls-4 {
+      fill: color('tomato');
+    }
+    .cls-5 {
+      fill: color('tomato--dark');
+    }
+    .cls-6 {
+      fill: color('platinum');
+    }
+  }
+
+  &[name="add-a-place"] {
+    .cls-1 {
+      fill: color('#{$main-color}');
+    }
+    .cls-2 {
+      fill: color('platinum');
+    }
+    .cls-3 {
+      fill: color('tomato');
+    }
+    .cls-4 {
+      fill: color('tomato--dark');
+    }
+    .cls-5 {
+      fill: color('platinum');
+    }
+    .cls-6 {
+      fill: color('platinum--dark');
+    }
+  }
+
+  &[name="add-a-screen"] {
+    .cls-1 {
+      fill: color('#{$main-color}');
+    }
+    .cls-2 {
+      fill: color('platinum');
+    }
+    .cls-3 {
+      fill: color('tomato');
+    }
+    .cls-4 {
+      fill: color('tomato--dark');
+    }
+    .cls-5 {
+      fill: color('platinum--dark');
+    }
+    .cls-6 {
+      fill: color('platinum');
+    }
+  }
+
+  &[name="error"] {
+    .cls-1 {
+      fill: color('tomato');
+    }
+    .cls-2 {
+      fill: color('platinum');
+    }
+    .cls-3 {
+      fill: color('platinum');
+    }
+    .cls-4 {
+      fill: color('platinum--dark');
+    }
+    .cls-5 {
+      fill: color('tomato--dark');
+    }
+    .cls-6 {
+      fill: color('tomato');
+    }
+    .cls-8 {
+      fill: color('#{$main-color}');
+    }
+  }
+
+  &[name="info"] {
+    .cls-1 {
+      fill: color('tomato');
+    }
+    .cls-2 {
+      fill: color('tomato--dark');
+    }
+    .cls-3 {
+      fill: color('platinum');
+    }
+    .cls-4 {
+      fill: color('platinum--dark');
+    }
+    .cls-5 {
+      fill: color('#{$main-color}');
+    }
+  }
+
+  &[name="warning"] {
+    .cls-1 {
+      fill: color('platinum');
+    }
+    .cls-2 {
+      fill: color('platinum--dark');
+    }
+    .cls-3 {
+      fill: color('tomato');
+    }
+    .cls-4 {
+      fill: color('tomato--dark');
+    }
+  }
+
+  &[name="edit"] {
+    .cls-1 {
+      fill: color('#{$main-color}');
+    }
+    .cls-2 {
+      fill: color('#{$main-color}--dark');
+    }
+    .cls-3 {
+      fill: color('tomato');
+    }
+    .cls-4 {
+      fill: color('tomato--dark');
+    }
+    .cls-5 {
+      fill: color('tomato--dark');
+    }
+    .cls-6 {
+      fill: color('platinum');
+    }
+    .cls-7 {
+      fill: color('platinum--dark');
+    }
+    .cls-8 {
+      fill: color('platinum--dark');
+    }
+  }
+
+  &[name="trash-bin"] {
+    .cls-1 {
+      fill: color('platinum');
+    }
+    .cls-2 {
+      fill: color('#{$main-color}');
+    }
+    .cls-3 {
+      fill: color('#{$main-color}--dark');
+    }
+  }
+
+  &[name="settings"] {
+    .cls-3 {
+      fill: transparent;
+    }
+  }
+
+  &[name="toggle-off"] {
+    .cls-2 {
+      fill: color('platinum--dark');
+    }
+  }
+}
+
 @mixin icon (
   $icon-class: 'icon'
 ) {
@@ -33,6 +237,7 @@ $-icon-color-modifiers: (
       fill: color('platinum');
     }
 
+    @include special-icon-colors;
     // simpler icons can be targeted with color modifiers
     @each $color-name in $-icon-color-modifiers {
       @if index($-icon-color-modifiers, $color-name)==null {
@@ -41,7 +246,7 @@ $-icon-color-modifiers: (
 
       @include modifier('primary') {
         .cls-1, .cls-3 {
-          fill: color('sea-green', 0.8);
+          fill: color('sea-green--dark');
         }
         .cls-2 {
           fill: color('sea-green');
@@ -55,98 +260,9 @@ $-icon-color-modifiers: (
         .cls-2 {
           fill: color(#{$color-name});
         }
-      }
 
-      // action / notification icons are a bit more detailed
-      // and need to be styled individually
-      &[name="add-a-context"] {
-        .cls-1 {
-          fill: color('sea-green');
-        }
-        .cls-2 {
-          fill: color('platinum--dark', .3);
-        }
-        .cls-3 {
-          fill: color('platinum--dark', .6);
-        }
-        .cls-4 {
-          fill: color('platinum');
-        }
-        .cls-5 {
-          fill: color('platinum--dark');
-        }
-        .cls-6 {
-          fill: color('platinum');
-        }
-        .cls-7 {
-          fill: color('tomato');
-        }
-        .cls-8 {
-          fill: color('tomato--dark');
-        }
-      }
-
-      &[name="add-a-person"], &[name="add-a-relationship"] {
-        .cls-1 {
-          fill: color('sea-green');
-        }
-        .cls-2 {
-          fill: color('platinum');
-        }
-        .cls-3 {
-          fill: color('platinum--dark');
-        }
-        .cls-4 {
-          fill: color('tomato');
-        }
-        .cls-5 {
-          fill: color('tomato--dark');
-        }
-        .cls-6 {
-          fill: color('platinum');
-        }
-      }
-
-      &[name="add-a-place"] {
-        .cls-1 {
-          fill: color('sea-green');
-        }
-        .cls-2 {
-          fill: color('platinum');
-        }
-        .cls-3 {
-          fill: color('tomato');
-        }
-        .cls-4 {
-          fill: color('tomato--dark');
-        }
-        .cls-5 {
-          fill: color('platinum');
-        }
-        .cls-6 {
-          fill: color('platinum--dark');
-        }
-      }
-
-      &[name="add-a-screen"] {
-        .cls-1 {
-          fill: color('sea-green');
-        }
-        .cls-2 {
-          fill: color('platinum');
-        }
-        .cls-3 {
-          fill: color('tomato');
-        }
-        .cls-4 {
-          fill: color('tomato--dark');
-        }
-        .cls-5 {
-          fill: color('platinum--dark');
-        }
-        .cls-6 {
-          fill: color('platinum');
-        }
+        // edit the fancy icon colors
+        @include special-icon-colors($main-color: $color-name);
       }
     }
 
@@ -164,6 +280,7 @@ $-icon-color-modifiers: (
     }
 
     // icon sizes
+    // add button icons
     &[name="add-a-person"],
     &[name="add-a-context"],
     &[name="add-a-relationship"],
@@ -173,13 +290,18 @@ $-icon-color-modifiers: (
       width: $icon-large-width;
     }
 
+    // action icons
     &[name="error"],
-    &[name="add-a-context"],
-    &[name="add-a-relationship"],
-    &[name="add-a-screen"],
-    &[name="add-a-place"] {
-      height: $icon-large-height;
-      width: $icon-large-width;
+    &[name="info"],
+    &[name="warning"],
+    &[name="edit"],
+    &[name="trash-bin"],
+    &[name="menu"],
+    &[name="settings"],
+    &[name="toggle-off"],
+    &[name="toggle-on"] {
+      height: $icon-medium-height;
+      width: $icon-medium-width;
     }
 
   }
