--- a/src/styles/global/core/_color.scss
+++ b/src/styles/global/core/_color.scss
@@ -44,6 +44,7 @@ $-color-alpha-map: (.1, .15, .3, .6, .8, 1) !default;
 @include color-set('mustard', #f2b700); // connection color
 @include color-set('mustard--dark', #dba500);
 @include color-set('sea-green', #00c9a2); // primary action color
+@include color-set('sea-green--dark', #00a081);
 @include color-set('white', #fff); // type / selected color
 @include color-set('slate-blue', #6b72ec); // settings color
 @include color-set('navy-taupe', #2d2955); // background
