--- a/lib/styles/components/node.scss
+++ b/lib/styles/components/node.scss
@@ -47,7 +47,7 @@
 
   &--placeholder {
     // sass-lint:disable no-important
-    opacity: .25;
+    opacity: .25 !important;
     transition: none !important;
   }
 }
