--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -47,7 +47,7 @@
 
   &--placeholder {
     // sass-lint:disable no-important
-    opacity: .25 !important
+    opacity: .25 !important;
     transition: none !important;
   }
 }
