--- a/lib/styles/components/node.scss
+++ b/lib/styles/components/node.scss
@@ -46,8 +46,6 @@
   }
 
   &--placeholder {
-    // sass-lint:disable no-important
-    opacity: .25 !important;
-    transition: none !important;
+    opacity: .25;
   }
 }
