Adding settings color palette via slate-blue.

--- a/src/styles/components/icons.scss
+++ b/src/styles/components/icons.scss
@@ -17,7 +17,8 @@ $-icon-color-modifiers: (
   'purple-pizazz',
   'kiwi',
   'cerulean-blue',
-  'paradise-pink'
+  'paradise-pink',
+  'slate-blue'
 ) !default;
 
 @mixin special-icon-colors(
